--- a/index.html
+++ b/index.html
@@ -130,28 +130,6 @@
     .btn-secondary:hover {
       background: #4b5563;
     }
-    .training-pair {
-      background: var(--card-bg);
-      padding: 16px;
-      border-radius: 12px;
-      box-shadow: var(--shadow-sm);
-      margin-bottom: 12px;
-      display: flex;
-      gap: 12px;
-      align-items: center;
-      flex-wrap: wrap;
-    }
-    .training-pair input {
-      flex: 1;
-      min-width: 150px;
-      padding: 8px;
-      border: 1px solid var(--border);
-      border-radius: 4px;
-    }
-    .pair-actions {
-      display: flex;
-      gap: 8px;
-    }
     .stats {
       text-align: center;
       margin-bottom: 20px;
@@ -276,6 +254,12 @@
       font-size: 16px;
       letter-spacing: 0.5px;
     }
+    .btn-group {
+      display: flex;
+      gap: 10px;
+      justify-content: center;
+      margin: 20px 0;
+    }
   </style>
 </head>
 <body>
@@ -327,9 +311,12 @@
     </form>
 
     <div id="loading" class="loading hidden">Loading training data...</div>
-    <div id="pairs-list"></div>
+    <div id="pairs-list" class="hidden"></div>
 
-    <button id="retrain-btn" class="btn hidden" style="display: block; margin: 20px auto;">Trigger Retrain (Saves & Notifies)</button>
+    <div class="btn-group hidden">
+      <button id="clear-all-btn" class="btn btn-danger">Clear All Training Data</button>
+      <button id="retrain-btn" class="btn">Trigger Retrain (Saves & Notifies)</button>
+    </div>
 
     <!-- Dynamic Train Section -->
     <div id="train-section" class="hidden"></div>
@@ -377,7 +364,9 @@
       progressFill: document.getElementById('progress-fill'),
       loading: document.getElementById('loading'),
       pairsList: document.getElementById('pairs-list'),
+      clearAllBtn: document.getElementById('clear-all-btn'),
       retrainBtn: document.getElementById('retrain-btn'),
+      btnGroup: container.querySelector('.btn-group'),
       trainSection: document.getElementById('train-section'),
       trainStatus: document.getElementById('train-status'),
       modelStatus: document.getElementById('model-status')
@@ -388,9 +377,9 @@
     let dataKeys = [];
     let dataLoaded = false;
 
-    // VOCAB SETTINGS
-    let MAX_VOCAB = 1000;
-    const MAX_SEQ_LEN = 50;
+    // VOCAB SETTINGS - Further reduced for efficiency
+    let MAX_VOCAB = 200;
+    const MAX_SEQ_LEN = 30; // Reduced max sequence length
     const STOPWORDS = new Set(['the','a','an','and','or','but','in','on','at','to','for','of','with','is','are','was','were','i','you','he','she','it','we','they','this','that','what','how','why','when','where','my','your','his','her','its','our','their','me','him','us','them','be','have','do','does','did','will','would','can','could','should','may','might','must']);
 
     // Overlay functions
@@ -426,23 +415,7 @@
     }
 
     function renderPairs() {
-      elements.pairsList.innerHTML = '';
-      dataKeys.forEach(key => {
-        const pair = trainingData[key];
-        if (!pair || !pair.q || !pair.a) return;
-
-        const pairDiv = document.createElement('div');
-        pairDiv.className = 'training-pair';
-        pairDiv.innerHTML = `
-          <input type="text" value="${pair.q}" data-key="${key}" data-field="q" placeholder="Question">
-          <input type="text" value="${pair.a}" data-key="${key}" data-field="a" placeholder="Answer">
-          <div class="pair-actions">
-            <button class="btn btn-secondary" onclick="updatePair('${key}', this)">Update</button>
-            <button class="btn btn-danger" onclick="deletePair('${key}', this)">Delete</button>
-          </div>
-        `;
-        elements.pairsList.appendChild(pairDiv);
-      });
+      // No longer rendering the list of pairs to avoid clutter
       updateStats();
     }
 
@@ -457,41 +430,19 @@
       return newPair;
     }
 
-    window.updatePair = async function(key, btn) {
+    window.clearAllData = async function() {
       if (!currentUser) return;
-      const inputs = document.querySelectorAll(`[data-key="${key}"]`);
-      const qInput = inputs[0].value.trim().toLowerCase();
-      const aInput = inputs[1].value.trim();
-      if (!qInput || !aInput) {
-        showError('Question and answer cannot be empty.');
-        return;
-      }
+      if (!confirm('Delete ALL training data? This cannot be undone.')) return;
       try {
         hideMessages();
-        btn.textContent = 'Updating...';
-        const pairRef = ref(db, `training_data/${key}`);
-        await update(pairRef, { q: qInput, a: aInput, timestamp: Date.now() });
-        showSuccess('Pair updated successfully!');
-        btn.textContent = 'Update';
+        elements.clearAllBtn.textContent = 'Clearing...';
+        const trainingRef = ref(db, 'training_data');
+        await remove(trainingRef);
+        showSuccess('All training data cleared successfully!');
+        elements.clearAllBtn.textContent = 'Clear All Training Data';
       } catch (error) {
-        showError('Failed to update pair: ' + error.message);
-        btn.textContent = 'Update';
-      }
-    };
-
-    window.deletePair = async function(key, btn) {
-      if (!currentUser) return;
-      if (!confirm('Delete this training pair?')) return;
-      try {
-        hideMessages();
-        btn.textContent = 'Deleting...';
-        const pairRef = ref(db, `training_data/${key}`);
-        await remove(pairRef);
-        showSuccess('Pair deleted successfully!');
-        btn.textContent = 'Delete';
-      } catch (error) {
-        showError('Failed to delete pair: ' + error.message);
-        btn.textContent = 'Delete';
+        showError('Failed to clear data: ' + error.message);
+        elements.clearAllBtn.textContent = 'Clear All Training Data';
       }
     };
 
@@ -544,8 +495,8 @@
       if (saved.modelType === 'classifier') {
         model = tf.sequential({
           layers: [
-            tf.layers.dense({ inputShape: [saved.inputDim], units: 64, activation: 'relu' }),
-            tf.layers.dropout({ rate: 0.2 }),
+            tf.layers.dense({ inputShape: [saved.inputDim], units: 16, activation: 'relu' }),
+            tf.layers.dropout({ rate: 0.3 }),
             tf.layers.dense({ units: saved.numClasses, activation: 'softmax' })
           ]
         });
@@ -554,19 +505,19 @@
           layers: [
             tf.layers.embedding({
               inputDim: saved.vocabSize,
-              outputDim: saved.embedDim || 32,
+              outputDim: saved.embedDim || 8,
               inputLength: saved.maxLen
             }),
-            tf.layers.lstm({
-              units: saved.lstmUnits || 64,
-              dropout: 0.2
+            tf.layers.gru({ // Switched to GRU for efficiency
+              units: saved.gruUnits || 16,
+              dropout: 0.3
             }),
             tf.layers.dense({ units: saved.numClasses, activation: 'softmax' })
           ]
         });
       }
       model.compile({
-        optimizer: 'adam',
+        optimizer: tf.train.adam(0.001), // Explicit learning rate
         loss: 'categoricalCrossentropy',
         metrics: ['accuracy']
       });
@@ -639,8 +590,8 @@
             sampleInput = tf.tensor2d([textToVector('hello how are you today', vocab)]);
             model = tf.sequential({
               layers: [
-                tf.layers.dense({ inputShape: [vocabSize], units: 64, activation: 'relu' }),
-                tf.layers.dropout({ rate: 0.2 }),
+                tf.layers.dense({ inputShape: [vocabSize], units: 16, activation: 'relu' }),
+                tf.layers.dropout({ rate: 0.3 }),
                 tf.layers.dense({ units: uniqueAnswers.length, activation: 'softmax' })
               ]
             });
@@ -656,14 +607,14 @@
             sampleInput = tf.tensor2d([questionToSequence('hello how are you today', wordToIdx, maxLen)]);
             model = tf.sequential({
               layers: [
-                tf.layers.embedding({ inputDim: vocabSize, outputDim: 32, inputLength: maxLen }),
-                tf.layers.lstm({ units: 64, dropout: 0.2 }),
+                tf.layers.embedding({ inputDim: vocabSize, outputDim: 8, inputLength: maxLen }),
+                tf.layers.gru({ units: 16, dropout: 0.3 }), // GRU for faster training
                 tf.layers.dense({ units: uniqueAnswers.length, activation: 'softmax' })
               ]
             });
           }
           model.compile({
-            optimizer: 'adam',
+            optimizer: tf.train.adam(0.001),
             loss: 'categoricalCrossentropy',
             metrics: ['accuracy']
           });
@@ -676,16 +627,32 @@
         elements.trainStatus.innerHTML += `<p>Model type: ${modelType} | Vocab size: ${vocabSize} | Answer classes: ${uniqueAnswers.length}${lstmInfo}</p>`;
 
         let finalAcc = 0;
+        let bestValAcc = 0;
+        let patience = 3;
+        let wait = 0;
         await model.fit(xs, ys, {
-          epochs: retrain ? 12 : 35,
-          batchSize: Math.min(16, pairs.length),
+          epochs: retrain ? 8 : 15,
+          batchSize: Math.min(64, pairs.length),
           validationSplit: 0.2,
           callbacks: {
             onEpochEnd: (epoch, logs) => {
               finalAcc = logs.acc;
-              elements.trainStatus.innerHTML += `<p>Epoch ${epoch + 1}: Loss=${logs.loss.toFixed(4)}, Acc=${logs.acc.toFixed(4)}</p>`;
+              const valAcc = logs.val_acc;
+              elements.trainStatus.innerHTML += `<p>Epoch ${epoch + 1}: Loss=${logs.loss.toFixed(4)}, Acc=${logs.acc.toFixed(4)}, Val Acc=${valAcc.toFixed(4)}</p>`;
+              if (valAcc > bestValAcc) {
+                bestValAcc = valAcc;
+                wait = 0;
+              } else {
+                wait++;
+                if (wait >= patience) {
+                  elements.trainStatus.innerHTML += `<p>Early stopping at epoch ${epoch + 1}</p>`;
+                  throw new Error('Early stopping');
+                }
+              }
             }
           }
+        }).catch(err => {
+          if (err.message !== 'Early stopping') throw err;
         });
 
         const pred = model.predict(sampleInput);
@@ -697,7 +664,7 @@
 
         const saveData = {
           modelType,
-          version: '1.1',
+          version: '1.2',
           userId: currentUser.uid,
           timestamp: Date.now(),
           vocab,
@@ -710,8 +677,8 @@
         } else {
           saveData.vocabSize = vocabSize;
           saveData.maxLen = maxLen;
-          saveData.embedDim = 32;
-          saveData.lstmUnits = 64;
+          saveData.embedDim = 8;
+          saveData.gruUnits = 16; // Updated to GRU
         }
         await set(modelRef, saveData);
 
@@ -740,9 +707,11 @@
         sampleInput.dispose();
 
       } catch (error) {
-        elements.trainStatus.innerHTML += `<p class="error">Training failed: ${error.message}</p>`;
-        showError('Training error: ' + error.message);
-        console.error('Training error:', error);
+        if (error.message !== 'Early stopping') {
+          elements.trainStatus.innerHTML += `<p class="error">Training failed: ${error.message}</p>`;
+          showError('Training error: ' + error.message);
+          console.error('Training error:', error);
+        }
       }
     }
 
@@ -772,12 +741,12 @@
                   <input type="radio" name="model-type" value="classifier" checked> Classifier (fast retrieval)
                 </label>
                 <label>
-                  <input type="radio" name="model-type" value="lstm"> LSTM (sequence input)
+                  <input type="radio" name="model-type" value="lstm"> GRU (efficient sequence input)
                 </label>
                 <div class="slider-container">
                   <span>Max Vocab:</span>
-                  <input type="range" id="vocab-slider" min="200" max="2000" value="1000" step="100">
-                  <span id="vocab-value">1000</span>
+                  <input type="range" id="vocab-slider" min="50" max="500" value="200" step="50">
+                  <span id="vocab-value">200</span>
                 </div>
               </div>
               <button id="train-btn" class="btn">Train AI Model</button>
@@ -906,6 +875,7 @@
     });
 
     elements.retrainBtn.addEventListener('click', triggerRetrain);
+    elements.clearAllBtn.addEventListener('click', clearAllData);
 
     elements.bulkForm.addEventListener('submit', handleBulkSubmit);
 
@@ -941,7 +911,7 @@
         elements.authStatus.innerHTML = `Logged in as: ${user.displayName || user.email || 'User'} <button class="btn btn-secondary" onclick="signOutUser()" style="font-size: 12px; padding: 4px 8px; margin-left: 10px;">Sign Out</button>`;
         elements.addForm.classList.remove('hidden');
         elements.bulkForm.classList.remove('hidden');
-        elements.retrainBtn.classList.remove('hidden');
+        elements.btnGroup.classList.remove('hidden');
         elements.trainSection.classList.remove('hidden');
         loadTrainingData();
       } else {
@@ -949,7 +919,7 @@
         elements.authStatus.innerHTML = 'Not logged in. <button class="btn" onclick="signInAnonymously()">Sign In Anonymously</button>';
         elements.addForm.classList.add('hidden');
         elements.bulkForm.classList.add('hidden');
-        elements.retrainBtn.classList.add('hidden');
+        elements.btnGroup.classList.add('hidden');
         elements.trainSection.classList.add('hidden');
         elements.pairsList.innerHTML = '<p class="loading">Please sign in to manage training data.</p>';
         elements.loading.classList.add('hidden');
